train model with grid search

--- a/new_york_experiments/table_retrieval_newyork_title.ipynb
+++ b/new_york_experiments/table_retrieval_newyork_title.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,27 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.0.0-rc0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,20 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True, 'shards_acknowledged': True}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexing_tables.indices.close(index='data_table_newyork')\n",
     "indexing_tables.indices.put_settings(index='data_table_newyork', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
@@ -92,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,57 +192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ranking_model = tf.keras.models.load_model('../model_title/best_model_title_coattention_1_1_14_0.9374.h5')"
+    "with tf.device(\"/cpu:0\"):\n",
+    "    \n",
+    "    ranking_model = tf.keras.models.load_model('../model_title/best_model_attention_title_grid_search.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 148 entries, 0 to 147\n",
-      "Data columns (total 10 columns):\n",
-      "article_full_text           141 non-null object\n",
-      "article_key_match           148 non-null object\n",
-      "article_keywords            143 non-null object\n",
-      "article_main_passage        148 non-null object\n",
-      "article_meta_description    132 non-null object\n",
-      "article_meta_keywords       58 non-null object\n",
-      "article_summary             141 non-null object\n",
-      "article_tags                54 non-null object\n",
-      "article_title               148 non-null object\n",
-      "article_url                 148 non-null object\n",
-      "dtypes: object(10)\n",
-      "memory usage: 11.6+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_articles.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,47 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "148it [00:12, 11.55it/s]\n",
-      "148it [00:11,  8.30it/s]\n",
-      "148it [00:10, 13.88it/s]\n",
-      "148it [00:11, 13.73it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "accuracy_K = [1,5,10,20]\n",
+    "with tf.device(\"/cpu:0\"):\n",
     "\n",
-    "for k in accuracy_K:\n",
-    "     \n",
-    "    run_search(k)"
+    "    accuracy_K = [1,5,10,20]\n",
+    "\n",
+    "    for k in accuracy_K:\n",
+    "\n",
+    "        run_search(k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Acc@1', '0.0473'],\n",
-       " ['Acc@5', '0.1081'],\n",
-       " ['Acc@10', '0.2703'],\n",
-       " ['Acc@20', '0.5676']]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result"
    ]
