--- a/new_york_experiments/table_retrieval_newyork_title_main_passage_keywords2.ipynb
+++ b/new_york_experiments/table_retrieval_newyork_title_main_passage_keywords2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.0-rc0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.0-rc0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +79,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "indexing_tables.indices.close(index='data_table_newyork')\n",
     "indexing_tables.indices.put_settings(index='data_table_newyork', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
@@ -69,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,25 +237,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ranking_model = tf.keras.models.load_model('../model_title_main_passage_keywords/affinity_model_title_main_passage_keywords_1_1_34_0.9841.h5')"
+    "ranking_model = tf.keras.models.load_model('../model_title_main_passage_keywords/coattention_model_title_main_passage_keywords_1_1_39_0.9740.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 148 entries, 0 to 147\n",
+      "Data columns (total 10 columns):\n",
+      "article_full_text           141 non-null object\n",
+      "article_key_match           148 non-null object\n",
+      "article_keywords            143 non-null object\n",
+      "article_main_passage        148 non-null object\n",
+      "article_meta_description    132 non-null object\n",
+      "article_meta_keywords       58 non-null object\n",
+      "article_summary             141 non-null object\n",
+      "article_tags                54 non-null object\n",
+      "article_title               148 non-null object\n",
+      "article_url                 148 non-null object\n",
+      "dtypes: object(10)\n",
+      "memory usage: 11.6+ KB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 148 entries, 0 to 147\n",
+      "Data columns (total 10 columns):\n",
+      "article_full_text           141 non-null object\n",
+      "article_key_match           148 non-null object\n",
+      "article_keywords            143 non-null object\n",
+      "article_main_passage        148 non-null object\n",
+      "article_meta_description    132 non-null object\n",
+      "article_meta_keywords       58 non-null object\n",
+      "article_summary             141 non-null object\n",
+      "article_tags                54 non-null object\n",
+      "article_title               148 non-null object\n",
+      "article_url                 148 non-null object\n",
+      "dtypes: object(10)\n",
+      "memory usage: 11.6+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "raw_articles.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,9 +373,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "148it [00:51,  3.95it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "148it [00:38,  3.98it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "148it [00:39,  3.69it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "148it [00:38,  3.91it/s]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy_K = [1,5,10,20]\n",
     "\n",
@@ -307,9 +401,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Acc@1', '0.3514'],\n",
+       " ['Acc@5', '0.527'],\n",
+       " ['Acc@10', '0.6486'],\n",
+       " ['Acc@20', '0.7635']]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['Acc@1', '0.3514'],\n",
+       " ['Acc@5', '0.527'],\n",
+       " ['Acc@10', '0.6486'],\n",
+       " ['Acc@20', '0.7635']]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result"
    ]
