--- a/model_title/table_retrieval_title.ipynb
+++ b/model_title/table_retrieval_title.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,27 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.0.0-rc0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,20 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True, 'shards_acknowledged': True}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -91,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +105,7 @@
     "        body = {\n",
     "        \"_source\": [\"tablePgID\",\"tablePgTitle\"],\n",
     "        \"from\" : 0,\n",
-    "        \"size\" : 70,\n",
+    "        \"size\" : 100,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
@@ -135,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,94 +214,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ranking_model = tf.keras.models.load_model('best_model_title_coattention_1_1_14_0.9374.h5')"
+    "ranking_model = tf.keras.models.load_model('best_model_attention_title_grid_search.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>full_text</th>\n",
-       "      <th>keywords</th>\n",
-       "      <th>meta_description</th>\n",
-       "      <th>meta_keywords</th>\n",
-       "      <th>page_id</th>\n",
-       "      <th>page_title</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>when comes pioneers progressive rock handful b...</td>\n",
-       "      <td>faces anderson album chris jon went record tre...</td>\n",
-       "      <td>yes among year rock roll hall fame inductees c...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4125505</td>\n",
-       "      <td>rock roll hall famers jon anderson trevor rabi...</td>\n",
-       "      <td>because good photos the best yes album coverss...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           full_text  \\\n",
-       "0  when comes pioneers progressive rock handful b...   \n",
-       "\n",
-       "                                            keywords  \\\n",
-       "0  faces anderson album chris jon went record tre...   \n",
-       "\n",
-       "                                    meta_description meta_keywords  page_id  \\\n",
-       "0  yes among year rock roll hall fame inductees c...           NaN  4125505   \n",
-       "\n",
-       "                                          page_title  \\\n",
-       "0  rock roll hall famers jon anderson trevor rabi...   \n",
-       "\n",
-       "                                             summary tags  \n",
-       "0  because good photos the best yes album coverss...  NaN  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_articles.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,47 +298,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1026it [01:46,  9.66it/s]\n",
-      "1026it [01:44,  9.77it/s]\n",
-      "1026it [02:00,  9.15it/s]\n",
-      "1026it [01:45,  9.71it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "accuracy_K = [1,5,10,20]\n",
+    "with tf.device(\"/cpu:0\"):\n",
+    "    \n",
+    "    accuracy_K = [1,5,10,20]\n",
     "\n",
-    "for k in accuracy_K:\n",
-    "     \n",
-    "    run_search(k)"
+    "    for k in accuracy_K:\n",
+    "\n",
+    "        run_search(k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Acc@1', '0.3304'],\n",
-       " ['Acc@5', '0.3782'],\n",
-       " ['Acc@10', '0.4308'],\n",
-       " ['Acc@20', '0.5146']]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result"
    ]
@@ -436,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
