--- a/model_title_main_passage/attention_model_title_main_passage.ipynb
+++ b/model_title_main_passage/attention_model_title_main_passage.ipynb
@@ -347,6 +347,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "device_name = tf.test.gpu_device_name()\n",
+    "if device_name != '/device:GPU:0':\n",
+    "    raise SystemError('GPU not found')\n",
+    "print('found GPU at {}'.format(device_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = attention_model()"
    ]
   },
