--- a/model_title_main_passage_keywords_attributes_correlation/table_retrieval_title_main_passage_keywords_attributes_correlation.ipynb
+++ b/model_title_main_passage_keywords_attributes_correlation/table_retrieval_title_main_passage_keywords_attributes_correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.0-rc0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -68,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,25 +257,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    }
+   ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('coattention_model_title_main_passage_keywords_1_1_39_0.9740.h5')"
+    "ranking_model = tf.keras.models.load_model('coattention_model_title_main_passage_keywords_attributes_correlation_1_1_10_0.9604.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>meta_description</th>\n",
+       "      <th>meta_keywords</th>\n",
+       "      <th>page_id</th>\n",
+       "      <th>page_title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>when comes pioneers progressive rock handful b...</td>\n",
+       "      <td>faces anderson album chris jon went record tre...</td>\n",
+       "      <td>yes among year rock roll hall fame inductees c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4125505</td>\n",
+       "      <td>rock roll hall famers jon anderson trevor rabi...</td>\n",
+       "      <td>because good photos the best yes album coverss...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           full_text  \\\n",
+       "0  when comes pioneers progressive rock handful b...   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  faces anderson album chris jon went record tre...   \n",
+       "\n",
+       "                                    meta_description meta_keywords  page_id  \\\n",
+       "0  yes among year rock roll hall fame inductees c...           NaN  4125505   \n",
+       "\n",
+       "                                          page_title  \\\n",
+       "0  rock roll hall famers jon anderson trevor rabi...   \n",
+       "\n",
+       "                                             summary tags  \n",
+       "0  because good photos the best yes album coverss...  NaN  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_articles.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,9 +434,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1026it [04:01,  3.19it/s]\n",
+      "1026it [04:36,  4.69it/s]\n",
+      "1026it [03:39,  4.74it/s]\n",
+      "1026it [03:41,  4.78it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy_K = [1,5,10,20]\n",
     "\n",
@@ -346,9 +458,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Acc@1', '0.229'],\n",
+       " ['Acc@5', '0.3421'],\n",
+       " ['Acc@10', '0.3996'],\n",
+       " ['Acc@20', '0.499']]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result"
    ]
