parameters search on the title models

--- a/new_york_experiments/table_retrieval_newyork_title.ipynb
+++ b/new_york_experiments/table_retrieval_newyork_title.ipynb
@@ -53,8 +53,8 @@
    "outputs": [],
    "source": [
     "# embedding_model = gs.models.FastText.load_fasttext_format('../pre_trained_models/cc.en.300.bin')\n",
-    "# embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')\n",
-    "embedding_model = gs.models.FastText.load('train_embedding_model/fasttext_embedding_50d_all_signals_newyorkdata')"
+    "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')\n",
+    "# embedding_model = gs.models.FastText.load('train_embedding_model/fasttext_embedding_50d_all_signals_newyorkdata')"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "source": [
     "with tf.device(\"/cpu:0\"):\n",
     "    \n",
-    "    ranking_model = tf.keras.models.load_model('../model_title/best_model_attention_title_grid_search.h5')"
+    "    ranking_model = tf.keras.models.load_model('../model_title/best_model_coattention_title_grid_search.h5')"
    ]
   },
   {
