--- a/encoder_models/encoder_model_all_signals/encoder_model_all_signals.ipynb
+++ b/encoder_models/encoder_model_all_signals/encoder_model_all_signals.ipynb
@@ -18,8 +18,7 @@
     "tknzr = TweetTokenizer()\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "warnings.filterwarnings('ignore')\n",
-    "import fasttext\n",
-    "from sklearn.metrics import pairwise_distances"
+    "import fasttext"
    ]
   },
   {
@@ -78,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 31\n",
+    "MAX_PAD = 161\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -119,7 +118,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data.head(1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -133,9 +134,13 @@
     "\n",
     "for i,row in tqdm(train_data.iterrows()):\n",
     "    \n",
-    "    train_article_page_title.append(create_embedding(row['article_page_title']))\n",
-    "    train_true_table_page_title.append(create_embedding(row['true_table_page_title']))\n",
-    "    train_false_table_page_title.append(create_embedding(row['false_table_page_title']))"
+    "    article_catch_all = str(row['article_page_title'])+\" \"+str(row['article_page_meta_description'])+\" \"+str(row['article_page_keywords'])\n",
+    "    true_table_catch_all = str(row['true_table_page_title'])+\" \"+str(row['true_table_page_summary'])+\" \"+str(row['true_table_page_keywords'])\n",
+    "    false_table_catch_all = str(row['false_table_page_title'])+\" \"+str(row['false_table_page_summary'])+\" \"+str(row['false_table_page_keywords'])\n",
+    "    \n",
+    "    train_article_page_title.append(create_embedding(article_catch_all))\n",
+    "    train_true_table_page_title.append(create_embedding(true_table_catch_all))\n",
+    "    train_false_table_page_title.append(create_embedding(false_table_catch_all))"
    ]
   },
   {
@@ -168,9 +173,13 @@
     "\n",
     "for i,row in tqdm(validation_data.iterrows()):\n",
     "    \n",
-    "    validation_article_page_title.append(create_embedding(row['article_page_title']))\n",
-    "    validation_true_table_page_title.append(create_embedding(row['true_table_page_title']))\n",
-    "    validation_false_table_page_title.append(create_embedding(row['false_table_page_title']))"
+    "    article_catch_all = str(row['article_page_title'])+\" \"+str(row['article_page_meta_description'])+\" \"+str(row['article_page_keywords'])\n",
+    "    true_table_catch_all = str(row['true_table_page_title'])+\" \"+str(row['true_table_page_summary'])+\" \"+str(row['true_table_page_keywords'])\n",
+    "    false_table_catch_all = str(row['false_table_page_title'])+\" \"+str(row['false_table_page_summary'])+\" \"+str(row['false_table_page_keywords'])\n",
+    "    \n",
+    "    validation_article_page_title.append(create_embedding(article_catch_all))\n",
+    "    validation_true_table_page_title.append(create_embedding(true_table_catch_all))\n",
+    "    validation_false_table_page_title.append(create_embedding(false_table_catch_all))"
    ]
   },
   {
@@ -213,17 +222,17 @@
    "source": [
     "def triplet_loss(y_true, y_pred, alpha = 0.5):\n",
     "     \n",
-    "    anchor = y_pred[:,0:1024]\n",
-    "    positive = y_pred[:,1024:2048]\n",
-    "    negative = y_pred[:,2048:3072]\n",
+    "    anchor = y_pred[:,0:512]\n",
+    "    positive = y_pred[:,512:1024]\n",
+    "    negative = y_pred[:,1024:1536]\n",
     "        \n",
     "    # distance between the anchor and the positive\n",
-    "    pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
-    "    #pos_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, positive])\n",
+    "    #pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
+    "    pos_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, positive])\n",
     "    \n",
     "    # distance between the anchor and the negative\n",
-    "    neg_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-negative),axis=1)\n",
-    "    #neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
+    "    #neg_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-negative),axis=1)\n",
+    "    neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
     "    \n",
     "    # compute loss\n",
     "    basic_loss = pos_dist-(neg_dist+alpha)\n",
@@ -237,21 +246,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def shared_encoder_model_title():\n",
     "    \n",
-    "    article_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
-    "    true_table_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
-    "    false_table_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
+    "    article_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
+    "    true_table_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
+    "    false_table_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
     "\n",
-    "    context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(512))\n",
+    "    context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(256))\n",
     "   \n",
     "    #context vectors\n",
     "    context_article_page_title = context_layer(article_page_title)\n",
@@ -298,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"encoder_euclidian_title_{epoch:02d}_{val_loss:.4f}.h5\"\n",
+    "filepath=\"encoder_all_signals_{epoch:02d}_{val_loss:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_loss', verbose=1, save_best_only=True, mode='min')\n",
     "callbacks_list = [checkpoint]"
    ]
@@ -312,7 +314,7 @@
     "with tf.device(\"/cpu:0\"):\n",
     "\n",
     "    history = model.fit([train_article_page_title,train_true_table_page_title,train_false_table_page_title], Y_train_dummy, \n",
-    "          epochs=20, \n",
+    "          epochs=100, \n",
     "          batch_size=32,\n",
     "          verbose=1,\n",
     "          validation_data=([validation_article_page_title,validation_true_table_page_title,validation_false_table_page_title], Y_validation_dummy),\n",
