--- a/encoder_models/encoder_models_title/test_encoder_model_GRU_title.ipynb
+++ b/encoder_models/encoder_models_title/test_encoder_model_GRU_title.ipynb
@@ -51,18 +51,20 @@
    "source": [
     "def triplet_loss(y_true, y_pred, alpha = 0.4):\n",
     "     \n",
-    "    anchor = y_pred[:,0:64]\n",
-    "    positive = y_pred[:,64:128]\n",
-    "    negative = y_pred[:,128:192]\n",
-    "    \n",
+    "    anchor = y_pred[:,0:256]\n",
+    "    positive = y_pred[:,256:512]\n",
+    "    negative = y_pred[:,512:1024]\n",
+    "        \n",
     "    # distance between the anchor and the positive\n",
-    "    pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
-    "\n",
+    "    #pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
+    "    pos_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, positive])\n",
+    "    \n",
     "    # distance between the anchor and the negative\n",
-    "    neg_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-negative),axis=1)\n",
-    "\n",
+    "    #neg_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-negative),axis=1)\n",
+    "    neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
+    "    \n",
     "    # compute loss\n",
-    "    basic_loss = pos_dist-neg_dist+alpha\n",
+    "    basic_loss = pos_dist-(neg_dist+alpha)\n",
     "    loss = tf.keras.backend.maximum(basic_loss,0.0)\n",
     " \n",
     "    return loss"
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
     "true_table_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "false_table_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "\n",
-    "context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32))\n",
+    "context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(256))\n",
     "\n",
     "#context vectors\n",
     "context_article_page_title = context_layer(article_page_title)\n",
@@ -92,14 +94,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_4 (InputLayer)            [(None, 31, 50)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_5 (InputLayer)            [(None, 31, 50)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_6 (InputLayer)            [(None, 31, 50)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "bidirectional_1 (Bidirectional) (None, 512)          473088      input_4[0][0]                    \n",
+      "                                                                 input_5[0][0]                    \n",
+      "                                                                 input_6[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 1536)         0           bidirectional_1[0][0]            \n",
+      "                                                                 bidirectional_1[1][0]            \n",
+      "                                                                 bidirectional_1[2][0]            \n",
+      "==================================================================================================\n",
+      "Total params: 473,088\n",
+      "Trainable params: 473,088\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoder_model.summary()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,20 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder_model.load_weights('encoder_title_07_0.0345.h5')"
+    "encoder_model.load_weights('encoder_title_01_0.0000.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_encoder_model = tf.keras.Model(article_page_title,encoder_model.get_layer('bidirectional').output)"
+    "final_encoder_model = tf.keras.Model(article_page_title,encoder_model.get_layer('bidirectional_1').output)"
    ]
   },
   {
@@ -140,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [00:00, 4270.32it/s]\n"
+      "1026it [00:00, 4487.25it/s]\n"
      ]
     }
    ],
@@ -250,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85900it [00:16, 5205.96it/s]\n"
+      "85900it [00:17, 5009.08it/s]\n"
      ]
     }
    ],
@@ -326,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,14 +481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [02:36<00:00,  6.41it/s]\n"
+      "100%|██████████| 1026/1026 [05:06<00:00,  4.39it/s]\n"
      ]
     }
    ],
@@ -473,7 +506,7 @@
     "    \n",
     "    idQueryGoal = articles_ids[i]\n",
     "    \n",
-    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,64), tables_vector, metric='cosine')\n",
+    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,512), tables_vector, metric='cosine')\n",
     "    \n",
     "    #creating the dataframe\n",
     "    all_tables_score = []\n",
@@ -506,19 +539,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOP@1 = 0.0926\n",
-      "TOP@5 = 0.1481\n",
-      "TOP@10 = 0.1715\n",
-      "TOP@20 = 0.2018\n",
-      "TOP@50 = 0.2427\n",
-      "TOP@100 = 0.2953\n"
+      "TOP@1 = 0.1053\n",
+      "TOP@5 = 0.1501\n",
+      "TOP@10 = 0.1686\n",
+      "TOP@20 = 0.1901\n",
+      "TOP@50 = 0.2222\n",
+      "TOP@100 = 0.2417\n"
      ]
     }
    ],
@@ -530,41 +563,6 @@
     "print(\"TOP@50 = \"+ str(round(np.mean(AverageTop50),4)))\n",
     "print(\"TOP@100 = \"+ str(round(np.mean(AverageTop100),4)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
